--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "backend",
+  "name": "fluxo-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend for the Fluxo project management tool.",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "seed": "node prisma/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "project-management",
+    "collaboration",
+    "tasks"
+  ],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@prisma/client": "^6.16.2",
-    "bcryptjs": "^3.0.2",
+    "@prisma/client": "^5.14.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.2"
   }
 }
