--- a/backend/package.json
+++ b/backend/package.json
@@ -1,30 +1,27 @@
 {
-  "name": "fluxo-backend",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Backend for the Fluxo project management tool.",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "seed": "node prisma/seed.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/server.js"
   },
-  "keywords": [
-    "project-management",
-    "collaboration",
-    "tasks"
-  ],
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@prisma/client": "^5.14.0",
-    "bcryptjs": "^2.4.3",
+    "@prisma/client": "^5.22.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
+    "mysql2": "^3.15.3",
+    "prisma": "^5.22.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.2"
+    "@types/node": "^24.10.1",
+    "nodemon": "^3.1.11"
   }
 }
